manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "sssaks-651d"
    labels:
        app: "sssaks-651d"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: advsrc-sssaks-651d.5a15826144ae4f289db5.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "sssaks-651d"
                servicePort: 80
